--- a/emailNoStyles.html
+++ b/emailNoStyles.html
@@ -36,7 +36,7 @@
                       <table  class="button">
                           <tr>
                               <td>
-                                  <a  rel="noopener"  href="REPLACEME"  target="_blank">I am a button</a>
+                                  <a  rel="noopener"  href="https://www.google.com/"  target="_blank">I am a button</a>
                               </td>
                           </tr>
                       </table>
@@ -68,7 +68,7 @@
                       </p>
                       <a  rel="noopener"  href="mailto:YOUREMAIL@test.com">youremail@test.com</a>
                       <br>
-                      <a  id="unsubscribe-link" rel="noopener" href="REPLACEME"  target="_blank">unsubscribe</a>
+                      <a  id="unsubscribe-link" rel="noopener" href="https://www.google.com/"  target="_blank">unsubscribe</a>
                   </td>
               </tr>
           </table>
