--- a/emailNoStyles.html
+++ b/emailNoStyles.html
@@ -26,7 +26,7 @@
 			                          Hello!
 			                      </p>
 			                      <p>
-			                          This is some basic test content! I hope that this email <br>
+			                          This is some basic test content! I hope that this email
 			                          template proves to be handy!
 			                      </p>
 			                      <p>
