--- a/emailWithInlineStyles.html
+++ b/emailWithInlineStyles.html
@@ -7,7 +7,7 @@
 </head>  
 <body style="padding: 0; margin: 10px;">
   <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">This is preheader text. Some clients will show this text as a preview.</span>
-	<table class="container" style="font-family: Calibri, sans-serif; font-size: 16px; font-weight: normal; max-width: 640px;">  
+	<table class="container" role="presentation" style="font-family: Calibri, sans-serif; font-size: 16px; font-weight: normal; max-width: 640px;">  
 		<tr>  
 			<td>  
         
@@ -47,7 +47,7 @@
                                 </tr>
                             </table>
                         
-                            <table class="button" style="border: 0; border-spacing: 0; padding: 12px 18px 12px 18px; border-radius: 5px; background-color: #1F7F4C; margin: 0 0 16px 0;" bgcolor="#1F7F4C">
+                            <table class="button" role="presentation" style="border: 0; border-spacing: 0; padding: 12px 18px 12px 18px; border-radius: 5px; background-color: #1F7F4C; margin: 0 0 16px 0;" bgcolor="#1F7F4C">
                                 <tr>
                                     <td style="text-align: center;" align="center">
                                         <a rel="noopener" href="https://www.google.com/" target="_blank" style="font-size: 18px; color: #ffffff; text-decoration: none; display: block; text-align: center;">I am a button</a>
