--- a/emailNoStyles.html
+++ b/emailNoStyles.html
@@ -7,7 +7,7 @@
 </head>  
 <body>
   <span class="preheader">This is preheader text. Some clients will show this text as a preview.</span>
-	<table class="container">  
+	<table class="container" role="presentation">  
 		<tr>  
 			<td>  
         
@@ -47,7 +47,7 @@
                                 </tr>
                             </table>
                         
-                            <table  class="button">
+                            <table  class="button" role="presentation">
                                 <tr>
                                     <td>
                                         <a  rel="noopener"  href="https://www.google.com/"  target="_blank">I am a button</a>
