--- a/emailNoStyles.html
+++ b/emailNoStyles.html
@@ -65,7 +65,7 @@
                             <p>
                                 Test footer
                             </p>
-			   				 <img style="width: 300px; display: block;" width="300" alt="Your Image Description" src="Base 64 encoded image, or url to image">
+			   				<img alt="Your Image Description" src="Base 64 encoded image, or url to image">
                             <a class="mailto-link" rel="noopener"  href="mailto:YOUREMAIL@test.com">youremail@test.com</a>
                             <a class="unsubscribe-link" rel="noopener" href="https://www.google.com/"  target="_blank">unsubscribe</a>
                         </td>
