--- a/emailWithInlineStyles.html
+++ b/emailWithInlineStyles.html
@@ -10,7 +10,7 @@
 	<table class="container" role="presentation" style="font-family: sans-serif, Arial, Helvetica; font-size: 16px; font-weight: normal; max-width: 640px;">  
 		<tr>  
 			<td>  
-        
+		        
 		                <table class="header" role="presentation" style="border: 0; border-spacing: 0; padding: 0; width: 100%;" width="100%">
 		                    <tr>
 		                        <td>
@@ -66,8 +66,8 @@
 		                                Test footer
 		                            </p>
 					    <img alt="Your Image Description" src="Base 64 encoded image, or url to image" style="display: block;">
-		                            <a class="mailto-link" rel="noopener" href="mailto:YOUREMAIL@test.com" style="display: block; margin: 0;">youremail@test.com</a>
-		                            <a class="unsubscribe-link" rel="noopener" href="https://www.google.com/" target="_blank" style="display: block; margin: 0;">unsubscribe</a>
+		                            <a class="mailto-link" rel="noopener" href="mailto:YOUREMAIL@test.com" style="display: block; margin: 0; color: blue;">youremail@test.com</a>
+		                            <a class="unsubscribe-link" rel="noopener" href="https://www.google.com/" target="_blank" style="display: block; margin: 0; color: blue;">unsubscribe</a>
 		                        </td>
 		                    </tr>
 		                </table>
