More fixy fixes, and additional snippets in readme

--- a/emailNoStyles.html
+++ b/emailNoStyles.html
@@ -70,9 +70,15 @@
                         <p>
                             Test footer
                         </p>
-                        <img alt="Your Image Description" src="https://www.w3schools.com/images/w3schools_green.jpg">
-                        <a class="mailto-link" rel="noopener" href="mailto:YOUREMAIL@test.com" target="_blank" title="extra information about link" >youremail@test.com</a>
-                        <a class="unsubscribe-link" rel="noopener" href="https://www.google.com/"  target="_blank" title="extra information about link">unsubscribe</a>
+                        <div class="blockWrapper">
+                            <img alt="Your Image Description" src="https://www.w3schools.com/images/w3schools_green.jpg">
+                        </div>
+                        <div class="blockWrapperNoMargin">
+                            <a class="mailto-link" rel="noopener" href="mailto:YOUREMAIL@test.com" target="_blank" title="extra information about link" >youremail@test.com</a>
+                        </div>
+                        <div class="blockWrapper">
+                            <a class="unsubscribe-link" rel="noopener" href="https://www.google.com/"  target="_blank" title="extra information about link">unsubscribe</a>
+                        </div>
                     </td>
                 </tr>
             </table>
