--- a/emailWithInlineStyles.html
+++ b/emailWithInlineStyles.html
@@ -13,49 +13,49 @@
 </head>
 <body style="padding: 0; margin: 10px;">
 <span class="preheader" style="visibility: hidden; mso-hide: all; font-size: 1px; color: #ffffff; line-height: 1px; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; display: none;">This is preheader text. Some clients will show this text as a preview.</span>
-<table class="container" role="presentation" style="border-spacing: 0; padding: 0; font-family: Calibri, Arial, sans-serif; font-size: 16px; border: 0; width: 100%;" width="100%">
+<table class="container" role="presentation" style="border-spacing: 0; padding: 0; font-family: Arial, sans-serif; font-size: 16px; border: 0; width: 100%;" width="100%">
     <tr>
-        <td class="widthWrapper" style="font-family: Calibri, Arial, sans-serif; width: 640px;" width="640">
+        <td class="widthWrapper" style="font-family: Arial, sans-serif; width: 640px;" width="640">
             <table class="header" role="presentation" style="border: 0; border-spacing: 0; padding: 0; width: 100%;" width="100%">
                 <tr>
-                    <td style="font-family: Calibri, Arial, sans-serif;">
-                        <h1 style="font-family: Calibri, Arial, sans-serif;">Test Header</h1>
+                    <td style="font-family: Arial, sans-serif;">
+                        <h1 style="font-family: Arial, sans-serif;">Test Header</h1>
                     </td>
                 </tr>
             </table>
 
             <table class="main-content" role="presentation" style="border: 0; border-spacing: 0; padding: 0; width: 100%;" width="100%">
                 <tr>
-                    <td style="font-family: Calibri, Arial, sans-serif;">
-                        <p style="margin: 0 0 16px 0; font-family: Calibri, Arial, sans-serif; font-size: 16px;">
+                    <td style="font-family: Arial, sans-serif;">
+                        <p style="margin: 0 0 16px 0; font-family: Arial, sans-serif; font-size: 16px;">
                             Hello!
                         </p>
-                        <p style="margin: 0 0 16px 0; font-family: Calibri, Arial, sans-serif; font-size: 16px;">
+                        <p style="margin: 0 0 16px 0; font-family: Arial, sans-serif; font-size: 16px;">
                             This is some basic test content! I hope that this email
                             template proves to be handy!
                         </p>
-                        <p style="margin: 0 0 16px 0; font-family: Calibri, Arial, sans-serif; font-size: 16px;">
+                        <p style="margin: 0 0 16px 0; font-family: Arial, sans-serif; font-size: 16px;">
                             Thank you!
                         </p>
                         <table class="unordered-list" role="presentation" style="border: 0; border-spacing: 0; padding: 0; margin: 0 0 16px 12px;">
                             <tr>
-                                <td style="font-family: Calibri, Arial, sans-serif; vertical-align: top;" valign="top">•</td>
-                                <td style="font-family: Calibri, Arial, sans-serif; vertical-align: top;" valign="top">List item 1</td>
+                                <td style="font-family: Arial, sans-serif; vertical-align: top;" valign="top">•</td>
+                                <td style="font-family: Arial, sans-serif; vertical-align: top;" valign="top">List item 1</td>
                             </tr>
                             <tr>
-                                <td style="font-family: Calibri, Arial, sans-serif; vertical-align: top;" valign="top">•</td>
-                                <td style="font-family: Calibri, Arial, sans-serif; vertical-align: top;" valign="top">List item 2</td>
+                                <td style="font-family: Arial, sans-serif; vertical-align: top;" valign="top">•</td>
+                                <td style="font-family: Arial, sans-serif; vertical-align: top;" valign="top">List item 2</td>
                             </tr>
                             <tr>
-                                <td style="font-family: Calibri, Arial, sans-serif; vertical-align: top;" valign="top">•</td>
-                                <td style="font-family: Calibri, Arial, sans-serif; vertical-align: top;" valign="top">List item 3</td>
+                                <td style="font-family: Arial, sans-serif; vertical-align: top;" valign="top">•</td>
+                                <td style="font-family: Arial, sans-serif; vertical-align: top;" valign="top">List item 3</td>
                             </tr>
                         </table>
 
                         <table class="button" role="presentation" style="border: 0; border-spacing: 0; padding: 12px 18px 12px 18px; border-radius: 5px; background-color: #1F7F4C; margin: 0 0 16px 0;" bgcolor="#1F7F4C">
                             <tr>
-                                <td style="font-family: Calibri, Arial, sans-serif; text-align: center;" align="center">
-                                    <a rel="noopener" href="https://www.google.com/" target="_blank" title="extra information about link" style="font-size: 18px; color: #ffffff; text-decoration: none; display: block; text-align: center;">I am a button</a>
+                                <td style="font-family: Arial, sans-serif; text-align: center;" align="center">
+                                    <a rel="noopener" href="https://www.google.com/" target="_blank" title="extra information about link" style="font-size: 18px; color: #ffffff; text-decoration: none; text-align: center;">I am a button</a>
                                 </td>
                             </tr>
                         </table>
@@ -66,20 +66,26 @@
 
             <table class="footer" role="presentation" style="border: 0; border-spacing: 0; padding: 0; width: 100%;" width="100%">
                 <tr>
-                    <td style="font-family: Calibri, Arial, sans-serif;">
-                        <p style="margin: 0 0 16px 0; font-family: Calibri, Arial, sans-serif; font-size: 16px;">
+                    <td style="font-family: Arial, sans-serif;">
+                        <p style="margin: 0 0 16px 0; font-family: Arial, sans-serif; font-size: 16px;">
                             Test footer
                         </p>
-                        <img alt="Your Image Description" src="https://www.w3schools.com/images/w3schools_green.jpg">
-                        <a class="mailto-link" rel="noopener" href="mailto:YOUREMAIL@test.com" target="_blank" title="extra information about link" style="display: block; margin: 0; color: blue;">youremail@test.com</a>
-                        <a class="unsubscribe-link" rel="noopener" href="https://www.google.com/" target="_blank" title="extra information about link" style="display: block; margin: 0; color: blue; font-size: 12px;">unsubscribe</a>
+                        <div class="blockWrapper" style="margin: 0 0 16px 0;">
+                            <img alt="Your Image Description" src="https://www.w3schools.com/images/w3schools_green.jpg">
+                        </div>
+                        <div class="blockWrapperNoMargin" style="margin: 0;">
+                            <a class="mailto-link" rel="noopener" href="mailto:YOUREMAIL@test.com" target="_blank" title="extra information about link" style="margin: 0; color: blue;">youremail@test.com</a>
+                        </div>
+                        <div class="blockWrapper" style="margin: 0 0 16px 0;">
+                            <a class="unsubscribe-link" rel="noopener" href="https://www.google.com/" target="_blank" title="extra information about link" style="margin: 0; color: blue; font-size: 12px;">unsubscribe</a>
+                        </div>
                     </td>
                 </tr>
             </table>
 
         </td>
-        <!-- Empty td to fill in dead space (dont remove) -->
-        <td></td>
+        <!-- Empty td to fill in dead space (do remove) -->
+        <td style="font-family: Arial, sans-serif;"></td>
     </tr>
 </table>
 </body>
