--- a/emailNoStyles.html
+++ b/emailNoStyles.html
@@ -84,7 +84,7 @@
             </table>
 
         </td>
-        <!-- Empty td to fill in dead space (do remove) -->
+        <!-- Empty td to fill in dead space (dont remove) -->
         <td></td>
     </tr>
 </table>
