--- a/emailWithInlineStyles.html
+++ b/emailWithInlineStyles.html
@@ -84,7 +84,7 @@
             </table>
 
         </td>
-        <!-- Empty td to fill in dead space (do remove) -->
+        <!-- Empty td to fill in dead space (dont remove) -->
         <td style="font-family: Arial, sans-serif;"></td>
     </tr>
 </table>
